--- a/dlls/monster_mm.vcxproj.filters
+++ b/dlls/monster_mm.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="zombie.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gargantua.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="activity.h">
